# solidrocket

./: LICENSE.txt  README.md  pyproject.toml
src/solidrocket/: __about__.py
tests/: __init__.py
